@startuml
title <size: 30> US03 Class Diagram
note  "<b>Only methods related to\n<b>US03 are represented" as N1
skinparam linetype ortho

class GetListOfRoomsCTRL{
    + GetListOfRoomsCTRL(roomService : RoomService)
    - roomService : RoomService
    +getListOfRooms() : List<RoomDTO>
}

class RoomDTOMapper{

    + domainToDTO(listOfRooms : List<Room>) : List<RoomDTO>
    - convertRoomToDTO(room : Room) : RoomDTO
}

class RoomRepository <<Repository>>{
    - DATA : LinkedHashMap<RoomIDVO, Room>

    + findAll() : Iterable<Room>
}

class RoomService  <<Service>>{
    - roomRepository : RoomRepository
    - roomFactory : RoomFactory

    + getRooms() : List<Room>
}

class RoomDTO{
    - id : String
    - roomName :String
    - floor : int
    - roomHeight : double
    - roomLength : double
    - roomWidth : double
    - houseID : String
}

interface Repository{
    + findAll() : Iterable<T>
}

GetListOfRoomsCTRL ..> RoomService
RoomService ..> RoomRepository
GetListOfRoomsCTRL..> RoomDTOMapper
RoomDTOMapper ..> RoomDTO
Repository <|..up RoomRepository
@enduml1